<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome"
    tools:context="com.example.asus.hujayapps.EsayDuaActivity">

    <LinearLayout
        android:id="@+id/lineSkor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skor"
            android:textColor="#ffffff"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvSkor2"
            android:layout_width="50dp"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:text="@string/esay0"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineGambar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/lineSkor2"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivGambar"
            android:layout_width="match_parent"
            android:layout_height="210dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tvSoal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="15sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edtJawaban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineGambar"
        android:layout_margin="10dp"
        android:background="#fff"
        android:gravity="center"
        android:hint="@string/masukkan_jawaban_disini"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSubmit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edtJawaban"
        android:layout_margin="10dp"
        android:text="@string/submit1"
        android:background="#5f7dc9"/>

</RelativeLayout>
