<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.asus.hujayapps.CaraPenggunaanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Petunjuk Penggunaan"
            android:textSize="17sp"
            android:layout_marginLeft="110dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hujay Apps"
            android:textSize="19sp"
            android:textColor="#000"
            android:layout_marginLeft="145dp"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunasatu" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/keterangan"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunadua"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangandua"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunatiga"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangantiga"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunaempat"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keteranganempat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunalima"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keteranganlima"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunaenam"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keteranganenam"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunatujuh"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangantujuh"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunadelapan"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangandelapan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/gunasembilan"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/keterangansembilan"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
