<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bghome"
    tools:context="com.example.asus.hujayapps.PilganTigaActivity">

    <LinearLayout
        android:id="@+id/lineSkor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skor"
            android:textColor="#ffffff"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvSkor"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/skor0"
            android:textColor="#ffffff"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineSoal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/lineSkor"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvSoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#ddebee"
            android:gravity="center"
            android:textColor="#000000"
            android:padding="15dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linejawaban"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/lineSoal"
        android:layout_margin="10dp">

        <RadioGroup
            android:id="@+id/rgJawaban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbJawaban1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/rbJawaban2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <RadioButton
                android:id="@+id/rbJawaban3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <RadioButton
                android:id="@+id/rbJawaban4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linejawaban"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="#5f7dc9"
        android:text="@string/lanjut"/>

</RelativeLayout>
